--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_CW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_CW.cshtml
@@ -16,9 +16,9 @@
             <li id="li_condition_head_spcz" class="li_condition_head">出租</li>
             <li id="li_condition_head_dtcs" class="li_condition_head">出售</li>
         </ul>
-        <div id="div_condition_body" class="div_condition_body">
-
-        </div>
+        <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_ZJ" class="div_condition_body"></div>
+        <div id="div_condition_body_MJ" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
