--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DDC.cshtml
@@ -28,22 +28,22 @@
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 1001; position: relative;"></div>
         </div>
-        <div id="divDDCLB" class="div_row" style="z-index: 1000;">
+        <div id="divDDCCX" class="div_row" style="z-index: 1000;">
             <div class="div_row_left" style="margin-left: 128px;">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
+                <span class="spanFWCZ">车型</span>
             </div>
             <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK" style="position: relative;">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
+                <div id="divCXText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车型</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divCX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
             </div>
-            <div id="divDDCLBTip" class="Warn" style="z-index: 999; position: relative;"></div>
+            <div id="divDDCCXTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
         <div id="divDDCPP" class="div_row" style="z-index: 998;">
             <div class="div_row_left" style="margin-left: 128px;">
