--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_GCC.cshtml
@@ -12,9 +12,10 @@
     <div id="divNav" class="div_nav">
     </div>
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body" class="div_condition_body">
-
-        </div>
+        <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_CX" class="div_condition_body"></div>
+        <div id="div_condition_body_PP" class="div_condition_body"></div>
+        <div id="div_condition_body_JG" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
