--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWGY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWGY.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewBag.Title = "CW_CWZSLY";
+    ViewBag.Title = "CW_CWGY";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/CW/CW_CWZSLY.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CW/CW_CWZSLY.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CW/CW_CWZSLYYZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/CW/CW_CWGY.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CW/CW_CWGY.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CW/CW_CWGYYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
@@ -19,11 +19,11 @@
                 <span class="spanFWCZ">供求</span>
             </div>
             <div class="div_row_right">
-                <div class="div_radio" id="div_gq_zs">
-                    <img class="img_radio" id="img_gq_zs"/><label class="label_radio">赠送</label>
+                <div class="div_radio" id="div_gq_cwzs">
+                    <img class="img_radio" id="img_gq_cwzs"/><label class="label_radio">宠物赠送</label>
                 </div>
-                <div class="div_radio" id="div_gq_ly">
-                    <img class="img_radio" id="img_gq_ly"/><label class="label_radio">领养</label>
+                <div class="div_radio" id="div_gq_cwly">
+                    <img class="img_radio" id="img_gq_cwly"/><label class="label_radio">宠物领养</label>
                 </div>
                 <div class="div_radio" id="div_gq_xcqs">
                     <img class="img_radio" id="img_gq_xcqs"/><label class="label_radio">寻宠启事</label>
