--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CWCX/CWCX_CWGY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CWCX/CWCX_CWGY.cshtml
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/CWCX.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/CWCX/CWCX_CWZSLY.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/CWCX/CWCX_CWGY.js")"></script>
 }
 @section Section_Body {
     <div id="divNav" class="div_nav">
     </div>
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body" class="div_condition_body">
-
-        </div>
+        <div id="div_condition_body_GQ" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
