--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/QZZP/QZZP_QZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/QZZP/QZZP_QZZP.css
@@ -1,92 +1,13 @@
-﻿:-ms-input-placeholder {
-    color: #999;
-}
+﻿.div_bqss {margin-top: -7px;margin-left: -1px;width: auto;height: auto;border: 1px solid #ccc;background-color: #fff;box-shadow: 0px 0px 8px #888;border-radius: 4px;padding: 6px 10px;float: left;}
 
-.div_bqss {
-    margin-top: -7px;
-    margin-left: -1px;
-    width: 860px;
-    height: 770px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    box-shadow: 0px 0px 8px #888;
-    border-radius: 4px;
-    padding: 6px 10px;
-    float: left;
-}
+.div_zwlb_first {width: 100%;line-height: 30px;display: block;font-size: 13px;color: #333333;font-weight: 700;padding: 6px 10px;}
+.div_zwlb_first .em_zwlb_split {width: 800px;height: 1px;float: left;background: #cccccc;margin-top: 5px;}
 
-.div_zwlb_first {
-    width: 100%;
-    line-height: 30px;
-    display: block;
-    font-size: 13px;
-    color: #333333;
-    font-weight: 700;
-    padding: 6px 10px;
-}
+.div_zwlb_second {width: 100%;height: 30px;display: block;padding-left: 10px;}
+.div_zwlb_second .div_zwlb_second_inner {display: inline-block;float: left;height: 30px;width: 180px;font-size: 13px;color: #333333;padding: 6px 10px;cursor: pointer;}
+.div_zwlb_second .div_zwlb_second_inner:hover {color: #fd634f;}
+.div_zwlb_second .div_zwlb_second_inner .img_zwlb_second_inner {background-image: url(../../images/arrow_down.png);width: 12px;height: 18px;display: inline-block;}
 
-.div_zwlb_second {
-    width: 100%;
-    height: 30px;
-    display: block;
-    padding-left: 10px;
-}
-
-.div_zwlb_second_inner {
-    display: inline-block;
-    float: left;
-    height: 30px;
-    width: 180px;
-    font-size: 13px;
-    color: #333333;
-    padding: 6px 10px;
-    cursor: pointer;
-}
-
-    .div_zwlb_second_inner:hover {
-        color: #fd634f;
-    }
-
-.img_zwlb_second_inner {
-    background-image: url(../images/arrow_down.png);
-    width: 12px;
-    height: 18px;
-    display: inline-block;
-}
-
-.em_zwlb_split {
-    width: 800px;
-    height: 1px;
-    float: left;
-    background: #cccccc;
-    margin-top: 5px;
-}
-
-.span_zwlb_third {
-    width: 130px;
-    height: 30px;
-    display: inline-block;
-    text-align: left;
-    color: #333333;
-    font-size: 13px;
-    padding: 6px 10px;
-    cursor: pointer;
-}
-
-.span_zwlb_third:hover {
-    color: #fd634f;
-}
-
-.div_zwlb_third {
-    margin-top: -1px;
-    margin-left: -1px;
-    width: 425px;
-    height: 300px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    box-shadow: 0px 0px 8px #888;
-    border-radius: 4px;
-    display: none;
-    z-index: 1001;
-    position: relative;
-}
+.div_zwlb_third {margin-top: -1px;margin-left: -1px;width: 550px;height: auto;border: 1px solid #ccc;background-color: #fff;box-shadow: 0px 0px 8px #888;border-radius: 4px;display: none;z-index: 1001;position: relative;}
+.div_zwlb_third .span_zwlb_third {width: 140px;height: 30px;display: inline-block;text-align: left;color: #333333;font-size: 13px;padding: 6px 4px;cursor: pointer;}
+.div_zwlb_third .span_zwlb_third:hover {color: #fd634f;}
