--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
@@ -16,15 +16,15 @@
         <span class="span_split">职位信息</span>
         <em class="em_split"></em>
     </div>
-    <div id="divZPJZMC" class="div_row" style="margin-top: 22px; z-index: 1001;">
-        <div class="div_row_left">
+    <div id="divBT" class="div_row" style="margin-top: 22px; z-index: 1001;">
+        <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">*</span>
-            <span id="spanPPMC">兼职名称</span>
+            <span id="spanPPMC">标题</span>
         </div>
         <div class="div_row_right">
-            <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 300px; padding: 6px 12px;" type="text" placeholder="请输入职位名称"/>
+            <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 300px; padding: 6px 12px;" type="text" placeholder="请填写标题"/>
         </div>
-        <div id="divZPJZMCTip"></div>
+        <div id="divBTTip"></div>
     </div>
     <div id="divZPJZLB" class="div_row" style="margin-top: 22px; z-index: 1000;">
         <div class="div_row_left">
