--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
@@ -13,26 +13,26 @@
             <span class="span_split">职位信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divZWMC" class="div_row" style="margin-top: 22px; z-index: 999;">
-            <div class="div_row_left">
+        <div id="divBT" class="div_row" style="margin-top: 22px;">
+            <div class="div_row_left" style="margin-left: 128px;">
                 <span class="span_required">*</span>
-                <span id="spanPPMC">职位名称</span>
+                <span id="spanBT">标题</span>
             </div>
             <div class="div_row_right">
-                <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 300px; padding: 6px 12px;" type="text" placeholder="请输入职位名称"/>
+                <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                <div id="divBTTip"></div>
             </div>
-            <div id="divZWMCTip"></div>
         </div>
         <div id="divZPZWLB" class="div_row" style="margin-top: 22px; z-index: 999;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">职位类别</span>
+                <span class="spanFWCZ">职位名称</span>
             </div>
             <div class="div_row_right">
                 <div id="divZWLBText" class="div_select_out SRK" style="position: relative;">
                     <div id="divZWLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="ZWLBID"/>
-                        <span id="spanZWLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择职位类别</span>
+                        <span id="spanZWLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择职位名称</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divZWLB" class="div_bqss" style="display: none">
