--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZPCX/QZZPCX_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZPCX/QZZPCX_JZZP.cshtml
@@ -12,7 +12,7 @@
     <div id="divNav" class="div_nav">
     </div>
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_JZLB" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
