--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/QZZPCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/QZZPCX.css
@@ -56,7 +56,7 @@
 /*首页_主体_左部*/
 .div_body .div_body_left{display: inline-block;width: 980px;height: 1760px;background-color: #ffffff;float: left;}
 .div_body .div_body_left .ul_body_left{ width: 100%;padding: 0;}
-.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 140px;border-bottom: 1px solid #e6e6e6;padding: 10px;}
+.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: auto;border-bottom: 1px solid #e6e6e6;padding: 10px;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover{ background-color: #f9f9f9;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{width: 450px;height: 155px;float: left;display: inline-block;position: relative;padding: 6px;}
 .div_body .div_body_left .ul_body_left .li_body_left .p_div_li_body_left_left_bt{ font-size: 18px;font-weight: 700;}
@@ -65,9 +65,10 @@
 .div_body .div_body_left .ul_body_left .li_body_left .p_div_li_body_left_left_fl{font-size: 12px;color: #5bc0de;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 300px;padding: 10px;float: left;display: inline-block;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right{ width: 130px;display: inline-block;float: left;padding-top: 10px;}
-
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right .span_zj{font-size: 28px;font-weight: 700;margin-right: 5px;}
-
+.div_body .div_body_left .ul_body_left .li_body_left .span_li_body_left_bt{ font-size: 16px;font-weight: 700;width: 450px;display: inline-block;}
+.div_body .div_body_left .ul_body_left .li_body_left .span_li_body_left_gs{font-size: 13px;color: #999;width: 400px;display: inline-block;}
+.div_body .div_body_left .ul_body_left .li_body_left .span_li_body_left_gz{font-size: 13px;}
 /*首页_主体_左部_分页*/
 .div_body .div_body_left .div_main_info_bottom {background-color: #fff;text-align: center;height: 38px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
 .div_body .div_body_left .div_main_info_bottom .div_main_info_bottom_fy { width: 100%;}
