--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -47,15 +47,15 @@
                 <td class="headtd">
                     <div style="width: 960px;">
                         <div class="divstep" id="divXZDL">
-                            <span class="spanstep" id="spanXZDL">1.选择大类</span>
+                            <span class="spanstep" id="spanXZDL">1.选择类别</span>
                             <em class="emstep" id="emXZDL"></em>
                         </div>
                         <div class="divstep" id="divXZXL">
-                            <span class="spanstep" id="spanXZXL">2.选择小类</span>
+                            <span class="spanstep" id="spanXZXL">2.填写信息</span>
                             <em class="emstep" id="emXZXL"></em>
                         </div>
                         <div class="divstep" id="divFBXX">
-                            <span class="spanstep" id="spanFBXX">3.发布信息</span>
+                            <span class="spanstep" id="spanFBXX">3.完成发布</span>
                             <em class="emstep" id="emFBXX"></em>
                         </div>
                     </div>
