--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_NY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_NY.cshtml
@@ -30,14 +30,14 @@
         </div>
         <div id="divNYLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
-    <div id="divNYXL" class="div_row" style="z-index: 996; display: none;">
+    <div id="divXL" class="div_row" style="z-index: 996; display: none;">
         <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">*</span>
-            <span id="spanNYXL">小类</span>
+            <span id="spanXL">小类</span>
         </div>
-        <div id="divNYXLText" class="div_row_right" style="position: relative;">
+        <div id="divXLText" class="div_row_right" style="position: relative;">
         </div>
-        <div id="divNYXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
+        <div id="divXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
     <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998;">
         <div class="div_row_left">
