--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_WLFW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_WLFW.cshtml
@@ -30,14 +30,14 @@
         </div>
         <div id="divWLFWLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
-    <div id="divWLFWXL" class="div_row" style="z-index: 996; display: none;">
+    <div id="divXL" class="div_row" style="z-index: 996; display: none;">
         <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">&nbsp;</span>
-            <span id="spanWLFWXL">小类</span>
+            <span id="spanXL">小类</span>
         </div>
-        <div id="divWLFWXLText" class="div_row_right" style="position: relative;">
+        <div id="divXLText" class="div_row_right" style="position: relative;">
         </div>
-        <div id="divWLFWXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
+        <div id="divXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
     </div>
     <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998;">
         <div class="div_row_left">
