--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_SP.cshtml
@@ -40,6 +40,15 @@
             </div>
             <div id="divSPLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
+        <div id="divXL" class="div_row" style="z-index: 996; display: none;">
+            <div class="div_row_left" style="margin-left: 128px;">
+                <span class="span_required">*</span>
+                <span id="spanXL">小类</span>
+            </div>
+            <div id="divXLText" class="div_row_right" style="position: relative;">
+            </div>
+            <div id="divXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
+        </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
             <em class="em_split"></em>
