--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -145,6 +145,8 @@
                 </div>
                 <div id="div_body_middle_left_CW" class="div_body_middle_left_section">
                 </div>
+                <div id="div_body_middle_left_PFCG" class="div_body_middle_left_section">
+                </div>
             </div>
             <div id="div_body_middle_left_2" class="div_body_middle_left">
                 <div id="div_body_middle_left_ZP" class="div_body_middle_left_section">
