--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPXCX/JYPXCX_SJPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPXCX/JYPXCX_SJPX.cshtml
@@ -14,7 +14,8 @@
     <div id="divCondition" class="div_condition">
         <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_XL" class="div_condition_body"></div>
-        <div id="div_condition_body_TZJE" class="div_condition_body"></div>
+        <div id="div_condition_body_XS" class="div_condition_body"></div>
+        <div id="div_condition_body_ZQ" class="div_condition_body"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
