--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LRCX/LRCX_MTSS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LRCX/LRCX_MTSS.cshtml
@@ -12,9 +12,8 @@
     <div id="divNav" class="div_nav">
     </div>
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body_JG" class="div_condition_body" style="padding-top: 20px;"></div>
-        <div id="div_condition_body_HZLX" class="div_condition_body"></div>
-        <div id="div_condition_body_FWXS" class="div_condition_body"></div>
+        <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_FS" class="div_condition_body"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
