--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DJSJWP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_DJSJWP.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewBag.Title = "SHFWSHFW_SJWX";
+    ViewBag.Title = "CL_DJSJWP";
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/SHFW/SHFW_QCPL.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_QCPL.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_QCPLYZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/CL/CL_DJSJWP.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_DJSJWP.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_DJSJWPYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
@@ -19,9 +19,18 @@
                 <span id="spanBT">标题</span>
             </div>
             <div class="div_row_right">
-                <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 472px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
+                <input id="BT" maxlength="50" column="BT" class="input_input SRK"  type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
                 <div id="divBTTip"></div>
             </div>
+        </div>
+        <div id="divOUTLB" class="div_row" style="z-index: 996;">
+            <div class="div_row_left" style="margin-left: 128px;">
+                <span class="span_required">*</span>
+                <span id="spanSJSJWPLB">类别</span>
+            </div>
+            <div id="divSJSJWPLBText" class="div_row_right" style="position: relative;">
+            </div>
+            <div id="divOUTLBTip"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left" style="margin-left: 128px;">
@@ -50,7 +59,7 @@
             <span class="span_split">特色描述</span>
             <em class="em_split"></em>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px; position: relative; z-index: 997;">
+        <div id="divBCMS" class="div_row" style="height: 253px;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">服务介绍</span>
