--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPL.cshtml
@@ -3,9 +3,9 @@
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/SHFW/SHFW_ZC.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_ZC.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SHFW/SHFW_ZCYZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/CL/CL_QCPL.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_QCPL.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_QCPLYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
@@ -19,36 +19,9 @@
                 <span id="spanBT">标题</span>
             </div>
             <div class="div_row_right">
-                <input id="BT" maxlength="50" column="BT" class="input_input SRK"  type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
+                <input id="BT" maxlength="50" column="BT" class="input_input SRK" style="width: 472px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔"/>
                 <div id="divBTTip"></div>
             </div>
-        </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 999">
-            <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK" style="position: relative;">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="LBID"/>
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divOUTLBTip"></div>
-        </div>
-        <div id="divXL" class="div_row" style="z-index: 998; display: none;">
-            <div class="div_row_left" style="margin-left: 128px;">
-                <span class="span_required">*</span>
-                <span id="spanXL">小类</span>
-            </div>
-            <div id="divXLText" class="div_row_right" style="position: relative;">
-            </div>
-            <div id="divXLTip"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left" style="margin-left: 128px;">
@@ -57,8 +30,8 @@
             </div>
             <div class="div_row_right">
                 <span id="spanJG" class="span_spaninput SRK" style="display: inline-block; width: 150px;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 105px" />
-                        <span class="spaninput_fontcolor">元/天</span>
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
+                        <span class="spaninput_fontcolor">元</span>
                     </span>
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
