--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_QCMRZS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_QCMRZS.cshtml
@@ -13,6 +13,11 @@
     </div>
     <div id="divCondition" class="div_condition">
         <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_XCFS" class="div_condition_body"></div>
+        <div id="div_condition_body_XCDD" class="div_condition_body"></div>
+        <div id="div_condition_body_PZ" class="div_condition_body"></div>
+        <div id="div_condition_body_PP" class="div_condition_body"></div>
+        <div id="div_condition_body_TMFW" class="div_condition_body"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
