--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
@@ -15,9 +15,9 @@
             <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
             <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
         </ul>
-        <div id="div_condition_body_FWLX" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_FWLX" class="div_condition_body"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
-        <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
