--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_SP.cshtml
@@ -217,7 +217,7 @@
                 </div>
                 <div id="divDDText" class="div_select_out SRK" style="z-index: 970;">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择商圈</span>
+                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
